--- a/QuickNotes/app/src/main/res/layout/activity_main.xml
+++ b/QuickNotes/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,35 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="#FAFAFA"
     tools:context="edu.rosehulman.finngw.quicknotes.MainActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
+    <Button
+        android:id="@+id/burger_button"
+        android:layout_width="35dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="37dp"
+        android:layout_marginLeft="20dp"
+        android:background="@android:color/transparent"
+        android:drawableTop="@drawable/menu_button" />
+
+    <ImageView
+        android:layout_width="200sp"
+        android:layout_height="25sp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="105dp"
+        android:src="@drawable/quicknotes_logo"/>
+
     <TextView
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="@string/dummy_content"
         android:textColor="#33b5e5"
         android:textSize="50sp"
         android:textStyle="bold" />
@@ -45,6 +60,7 @@
                 android:text="@string/dummy_button" />
 
         </LinearLayout>
+
     </FrameLayout>
 
-</FrameLayout>
+</RelativeLayout>
