--- a/QuickNotes/app/src/main/res/layout/activity_main.xml
+++ b/QuickNotes/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,17 @@
         android:id="@+id/burger_button"
         android:layout_width="35dp"
         android:layout_height="25dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="36dp"
         android:layout_marginLeft="20dp"
         android:background="@android:color/transparent"
         android:drawableTop="@drawable/menu_button" />
 
     <ImageView
+        android:id="@+id/logo"
         android:layout_width="200sp"
         android:layout_height="25sp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="105dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="108dp"
         android:src="@drawable/quicknotes_logo"/>
 
     <TextView
