--- a/QuickNotes/app/src/main/res/layout/activity_main.xml
+++ b/QuickNotes/app/src/main/res/layout/activity_main.xml
@@ -1,115 +1,26 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FAFAFA"
-    tools:context="edu.rosehulman.finngw.quicknotes.MainActivity">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
-    <LinearLayout
-        android:id="@+id/fullscreen_content"
+    <include
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/burger_button"
-                android:layout_width="35dp"
-                android:layout_height="25dp"
-                android:layout_marginTop="36dp"
-                android:layout_marginLeft="20dp"
-                android:background="@android:color/transparent"
-                android:drawableTop="@drawable/menu_button" />
-
-            <ImageView
-                android:id="@+id/logo"
-                android:layout_width="200sp"
-                android:layout_height="25sp"
-                android:layout_marginTop="32dp"
-                android:layout_marginLeft="55dp"
-                android:src="@drawable/quicknotes_logo"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:inputType="text"
-                android:hint="Title"
-                android:text=""
-                android:textSize="20sp"
-                android:ems="10"
-                android:id="@+id/title_input" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="5dp"
-                android:inputType="text"
-                android:hint="Description"
-                android:text=""
-                android:textSize="16sp"
-                android:ems="10"
-                android:id="@+id/description_input" />
-        </LinearLayout>
-
-        <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/alarm_button"
-                android:id="@+id/alarm_button"
-                android:background="@android:color/transparent"
-                android:paddingLeft="35dp"/>
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/notes_button"
-                android:id="@+id/note_button"
-                android:background="@android:color/transparent"
-                android:paddingLeft="10dp"/>
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/reminder_button"
-                android:id="@+id/reminder_button"
-                android:background="@android:color/transparent"
-                android:paddingLeft="10dp"/>
-        </android.support.v7.widget.LinearLayoutCompat>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/line"
-            android:layout_marginTop="10dp"
-            android:id="@+id/horizontal_line" />
-
-        <include layout="@layout/card_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
