--- a/QuickNotes/app/src/main/res/layout/app_bar_main.xml
+++ b/QuickNotes/app/src/main/res/layout/app_bar_main.xml
@@ -16,6 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:theme="@style/ToolbarColoredBack"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <ImageView
