--- a/QuickNotes/app/src/main/res/values/styles.xml
+++ b/QuickNotes/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
     </style>
 
     <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
-        <item name="android:background">@color/black_overlay</item>
+        <item name="android:background">@color/color_toolbar_icons</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -33,6 +33,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
         <item name="actionMenuTextColor">@color/color_toolbar_icons</item>
+    </style>
+
+    <style name="ToolbarColoredBack" parent="AppTheme">
+        <item name="colorControlNormal">@color/color_toolbar_icons</item>
     </style>
 
 </resources>
