--- a/QuickNotes/app/src/main/res/layout/content_main.xml
+++ b/QuickNotes/app/src/main/res/layout/content_main.xml
@@ -5,10 +5,8 @@
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="edu.rosehulman.finngw.quicknotes.MainActivity"
     tools:showIn="@layout/app_bar_main">
@@ -22,13 +20,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="8dp"
+            android:paddingTop="5dp"
             android:orientation="vertical">
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
                 android:inputType="text"
                 android:hint="Title"
                 android:text=""
@@ -39,7 +37,6 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:inputType="text"
                 android:hint="Description"
@@ -52,7 +49,7 @@
         <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:paddingTop="10dp"
             android:orientation="horizontal">
 
             <ImageButton
@@ -61,7 +58,7 @@
                 app:srcCompat="@drawable/alarm_button"
                 android:id="@+id/alarm_button"
                 android:background="@android:color/transparent"
-                android:paddingLeft="8dp"/>
+                android:paddingLeft="16dp"/>
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -69,7 +66,7 @@
                 app:srcCompat="@drawable/notes_button"
                 android:id="@+id/note_button"
                 android:background="@android:color/transparent"
-                android:paddingLeft="10dp"/>
+                android:paddingLeft="12dp"/>
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -77,7 +74,7 @@
                 app:srcCompat="@drawable/reminder_button"
                 android:id="@+id/reminder_button"
                 android:background="@android:color/transparent"
-                android:paddingLeft="10dp"/>
+                android:paddingLeft="12dp"/>
         </android.support.v7.widget.LinearLayoutCompat>
 
         <ImageView
