--- a/QuickNotes/app/src/main/res/values/colors.xml
+++ b/QuickNotes/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="color_toolbar_icons">#000000</color>
+    <color name="color_white">#FFFFFF</color>
+    <color name="color_black">#000000</color>
     <color name="black_overlay">#66000000</color>
 </resources>
