added icons to nav menu

--- a/QuickNotes/app/src/main/res/layout/app_bar_main.xml
+++ b/QuickNotes/app/src/main/res/layout/app_bar_main.xml
@@ -21,6 +21,7 @@
 
             <ImageView
                 android:id="@+id/logo"
+                android:paddingTop="5dp"
                 android:layout_width="200sp"
                 android:layout_height="30sp"
                 android:layout_gravity="center"
