--- a/QuickNotes/app/src/main/res/layout/activity_login.xml
+++ b/QuickNotes/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.rosehulman.finngw.quicknotes.LoginActivity">
+    tools:context="edu.rosehulman.finngw.quicknotes.adapters.LoginActivity">
 
     <ImageView
         android:layout_width="wrap_content"
