--- a/QuickNotes/app/src/main/res/layout/content_main.xml
+++ b/QuickNotes/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="edu.rosehulman.finngw.quicknotes.MainActivity"
+    tools:context=".activities.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
     <LinearLayout
@@ -17,7 +17,7 @@
         android:id="@+id/fullscreen_content"
         android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
@@ -44,9 +44,10 @@
                 android:textSize="16sp"
                 android:ems="10"
                 android:id="@+id/description_input" />
-        </LinearLayout>
+        </android.support.v7.widget.LinearLayoutCompat>
 
         <android.support.v7.widget.LinearLayoutCompat
+            android:id="@+id/image_buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
@@ -78,16 +79,15 @@
         </android.support.v7.widget.LinearLayoutCompat>
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/line"
-            android:layout_marginTop="10dp"
-            android:id="@+id/horizontal_line" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/line"
+        android:layout_marginTop="10dp"
+        android:id="@+id/horizontal_line" />
 
         <include layout="@layout/card_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-
     </LinearLayout>
 
 </RelativeLayout>
