--- a/QuickNotes/app/src/main/res/layout/activity_login.xml
+++ b/QuickNotes/app/src/main/res/layout/activity_login.xml
@@ -11,72 +11,78 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.rosehulman.finngw.quicknotes.adapters.LoginActivity">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logo_image"
-        android:layout_marginTop="80dp"
-        android:id="@+id/logo"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:hint="Email"
-        android:textColorHint="@android:color/darker_gray"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:textSize="20sp"
-        android:ems="10"
-        android:id="@+id/email_edit_text"
-        android:layout_below="@+id/logo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:textColorHint="@android:color/darker_gray"
-        android:textSize="20sp"
-        android:hint="Password"
-        android:ems="10"
-        android:id="@+id/password_edit_text"
-        android:layout_marginBottom="30dp"
-        android:layout_above="@+id/email_login_button"
-        android:layout_alignStart="@+id/email_edit_text"
-        android:layout_alignEnd="@+id/email_edit_text" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/logo_image"
+            android:id="@+id/logo" />
 
-    <TextView
-        android:text="@string/sign_in_agreement"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/sign_in_agreement"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="9sp" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:hint="Email"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="20sp"
+            android:ems="10"
+            android:id="@+id/email_edit_text"
+            android:layout_below="@+id/logo"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/gmail_login_button_1x"
-        android:id="@+id/gmail_login_button"
-        android:background= "@android:color/transparent"
-        android:layout_marginBottom="70dp"
-        android:layout_above="@+id/sign_in_agreement"
-        android:layout_alignEnd="@+id/email_login_button" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="20sp"
+            android:hint="Password"
+            android:ems="10"
+            android:id="@+id/password_edit_text"
+            android:layout_below="@+id/email_edit_text"
+            android:layout_alignStart="@+id/email_edit_text"
+            android:layout_alignEnd="@+id/email_edit_text"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="40dp"/>
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background= "@android:color/transparent"
-        app:srcCompat="@drawable/email_login_button_1x"
-        android:layout_marginBottom="66dp"
-        android:layout_marginTop="100dp"
-        android:id="@+id/email_login_button"
-        android:layout_alignBottom="@+id/gmail_login_button"
-        android:layout_centerHorizontal="true" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background= "@android:color/transparent"
+            app:srcCompat="@drawable/email_login_button_1x"
+            android:id="@+id/email_login_button"
+            android:layout_alignBottom="@+id/gmail_login_button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"/>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/gmail_login_button_1x"
+            android:id="@+id/gmail_login_button"
+            android:background= "@android:color/transparent"
+            android:layout_above="@+id/sign_in_agreement"
+            android:layout_alignEnd="@+id/email_login_button"
+            />
+
+        <!--<TextView-->
+            <!--android:text="@string/sign_in_agreement"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/sign_in_agreement"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:textSize="9sp" />-->
+
+    </LinearLayout>
+
 
 </RelativeLayout>
