commiting new XML and share preferences util

--- a/QuickNotes/app/src/main/res/layout/fragment_reminder.xml
+++ b/QuickNotes/app/src/main/res/layout/fragment_reminder.xml
@@ -2,33 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/title_reminder_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:text="Title"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="5dp"
+        />
 
     <TextView
         android:id="@+id/description_reminder_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:layout_marginLeft= "20dp"
+        android:layout_marginBottom="5dp"
+        android:text="Description"
+        />
 
     <TextView
         android:id="@+id/date_reminder_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:layout_marginLeft= "20dp"
+        android:layout_marginBottom="5dp"
+        android:text="Date"
+        />
 
     <TextView
         android:id="@+id/completed_reminder_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:layout_marginLeft= "20dp"
+        android:layout_marginBottom="5dp"
+        android:text="Completed"
+        />
 </LinearLayout>
