--- a/QuickNotes/app/src/main/res/layout/fragment_alarm.xml
+++ b/QuickNotes/app/src/main/res/layout/fragment_alarm.xml
@@ -2,26 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/title_alarm_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:layout_marginTop="5dp"
+        android:textSize="20sp"
+        android:layout_marginLeft= "20dp"
+        android:layout_marginBottom="5dp"
+        android:text="Title" />
 
     <TextView
         android:id="@+id/description_alarm_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:layout_marginLeft= "20dp"
+        android:layout_marginBottom="5dp"
+        android:text="description" />
 
     <TextView
         android:id="@+id/time_alarm_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:layout_marginLeft= "20dp"
+        android:layout_marginBottom="5dp"
+        android:text="time"/>
 </LinearLayout>
