--- a/QuickNotes/app/src/main/res/layout/fragment_note.xml
+++ b/QuickNotes/app/src/main/res/layout/fragment_note.xml
@@ -10,34 +10,17 @@
         android:id="@+id/title_note_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="?attr/textAppearanceListItem"
         android:text="Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/title_note_text"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="5dp"/>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="textMultiLine"
-            android:textSize="14sp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:text=""
-            android:id="@+id/description_note_text" />
-
-    </ScrollView>
-
-
-
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/description_note_text"
+        android:text="Description"
+        android:layout_marginLeft="20dp"
+        />
 </LinearLayout>
