--- a/QuickNotes/app/src/main/res/layout/card_list.xml
+++ b/QuickNotes/app/src/main/res/layout/card_list.xml
@@ -7,6 +7,6 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 app:layout_behavior="@string/appbar_scrolling_view_behavior"
 tools:context="edu.rosehulman.finngw.quicknotes.activities.MainActivity"
-tools:showIn="@layout/app_bar_main">
+tools:showIn="@layout/base_content">
 
 </FrameLayout>
