Fixes to Detail Fragments

--- a/QuickNotes/app/src/main/res/layout/fragment_note_detail.xml
+++ b/QuickNotes/app/src/main/res/layout/fragment_note_detail.xml
@@ -12,7 +12,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Title"
+            android:hint="Title"
             android:textSize="20sp"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
@@ -27,7 +27,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:id="@+id/note_detail_description"
-            android:text="Example Description Text"/>
+            android:hint="Description"/>
 
     </LinearLayout>
 </FrameLayout>
