--- a/QuickNotes/app/src/main/res/layout/app_bar_main.xml
+++ b/QuickNotes/app/src/main/res/layout/app_bar_main.xml
@@ -16,7 +16,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="50dp"
             app:theme="@style/ToolbarColoredBack"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
@@ -24,7 +24,7 @@
                 android:id="@+id/logo"
                 android:paddingTop="5dp"
                 android:layout_width="200sp"
-                android:layout_height="30sp"
+                android:layout_height="40sp"
                 android:layout_gravity="center"
                 android:src="@drawable/quicknotes_logo"/>
 
