--- a/QuickNotes/app/src/main/res/layout/base_content.xml
+++ b/QuickNotes/app/src/main/res/layout/base_content.xml
@@ -29,20 +29,27 @@
                 android:inputType="text"
                 android:hint="Title"
                 android:text=""
-                android:textSize="20sp"
-                android:ems="10"
-                android:id="@+id/title_input" />
+                android:textSize="22sp"
+                android:ems="18"
+                android:id="@+id/title_input"
+                android:maxLength="30">
+                <requestFocus />
+            </EditText>
 
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:inputType="text"
                 android:hint="Description"
                 android:text=""
-                android:textSize="16sp"
-                android:ems="10"
+                android:textSize="18sp"
+                android:ems="12"
+                android:gravity="left|top"
+                android:inputType="textMultiLine"
+                android:minLines="2"
+                android:maxLines="7"
                 android:id="@+id/description_input" />
+
         </android.support.v7.widget.LinearLayoutCompat>
 
         <android.support.v7.widget.LinearLayoutCompat
