Save fabs, detail callbacks, firebase edits

--- a/QuickNotes/app/src/main/res/layout/fragment_reminder_detail.xml
+++ b/QuickNotes/app/src/main/res/layout/fragment_reminder_detail.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_reminder_detail"
     tools:context="edu.rosehulman.finngw.quicknotes.fragments.ReminderDetailFragment">
 
@@ -9,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Title"
@@ -36,5 +37,14 @@
 
 
     </LinearLayout>
-
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="20dp"
+        android:id="@+id/fabReminder"
+        android:layout_marginRight="20dp"
+        android:clickable="true"
+        app:fabSize="normal"
+        app:srcCompat="@android:drawable/ic_menu_save"/>
 </FrameLayout>
