--- a/QuickNotes/app/src/main/res/layout/fragment_alarm_detail.xml
+++ b/QuickNotes/app/src/main/res/layout/fragment_alarm_detail.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/alarm_detail_fragment"
     tools:context="edu.rosehulman.finngw.quicknotes.fragments.AlarmDetailFragment">
 
@@ -9,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Title"
@@ -29,5 +30,15 @@
             android:text="Example Description Text"/>
 
     </LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="20dp"
+        android:id="@+id/fabAlarm"
+        android:layout_marginRight="20dp"
+        android:clickable="true"
+        app:fabSize="normal"
+        app:srcCompat="@android:drawable/ic_menu_save"/>
 
 </FrameLayout>
